--- a/App.config
+++ b/App.config
@@ -3,9 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QuanLyCuaHangTraSua.Properties.Settings.ConnectionString"
-            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=QuanLyCuaHangTraSua;Persist Security Info=True;User ID=sa;Password=123456;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
+        <add name="QuanLyCuaHangTraSua.Properties.Settings.ConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=QuanLyCuaHangTraSua;Persist Security Info=True;User ID=sa;Password=123456;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
