--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,8 @@
   <package id="Azure.Core" version="1.46.2" targetFramework="net472" />
   <package id="Azure.Identity" version="1.14.1" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.6.1" targetFramework="net472" />
+  <package id="EPPlus" version="8.0.7" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.6" targetFramework="net472" />
   <package id="Microsoft.Bcl.Cryptography" version="9.0.6" targetFramework="net472" />
@@ -23,9 +25,11 @@
   <package id="Microsoft.IdentityModel.Protocols" version="8.12.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.12.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="8.12.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
   <package id="QRCoder" version="1.6.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.ClientModel" version="1.4.2" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.6" targetFramework="net472" />
   <package id="System.Formats.Asn1" version="9.0.6" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="8.12.1" targetFramework="net472" />
@@ -38,6 +42,7 @@
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Pkcs" version="9.0.6" targetFramework="net472" />
   <package id="System.Security.Cryptography.ProtectedData" version="9.0.6" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="9.0.6" targetFramework="net472" />
   <package id="System.Text.Json" version="9.0.6" targetFramework="net472" />
